package game.cards;

public class Ark extends Card {
    public Ark() {
        this.name = "Arca";
        this.type = "ark";
        this.isOwnable = false;
        this.isOwned = false;
        this.isMortgable = false;
        this.isMortgabled = false;
    }
}
