package game.cards;

public class Luck extends Card {

    public Luck() {
        this.name = "Suerte";
        this.type = "luck";
        this.isOwnable = false;
        this.isOwned = false;
        this.isMortgable = false;
        this.isMortgabled = false;
    }

}