package game.pieces;

public class Pieces {

  public int distancex;
  public int distancey;
  public int posx;
  public int posy;
  
  public int topex;
  public int topey;

  public Pieces() {
    
    this.distancex = 63;
    this.distancey = 62 ;
    
  }

}
